bugfix(login): Container ID is not visible.

--- a/src/app/common/components/content-overlay/content-overlay.component.scss
+++ b/src/app/common/components/content-overlay/content-overlay.component.scss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: -1;
+  z-index: 0;
   font-size: 15rem;
   opacity: 0.2;
   font-weight: 500;
