--- a/src/app/common/components/number-squares-container/number-squares-container.component.scss
+++ b/src/app/common/components/number-squares-container/number-squares-container.component.scss
@@ -12,4 +12,8 @@
   justify-content: center;
   justify-items: center;
   align-items: center;
+
+  .number-squares__item {
+    z-index: 1;
+  }
 }
